--- a/package.json
+++ b/package.json
@@ -8,6 +8,6 @@
   "dependencies": {
     "express": "~3.2.4",
     "mongodb": "^2.2.27",
-    "mongoose": "^4.10.2",
+    "mongoose": "^4.10.5"
   }
 }
