--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "repository": "https://github.com/danieldang2017/instagram_clone.git",
   "author": "Tran Ngoc Phuong Dang <tdang3618@conestogac.on.ca>; Chi Hieu Tran <htran2620@conestogac.on.ca>; Duncan Robertson <drobertson4833@conestogac.on.ca> ",
   "dependencies": {
+    "bcrypt": "^1.0.2",
     "body-parser": "^1.17.2",
-    "express": "^3.2.6",
+    "express": "^3.21.2",
     "mongodb": "^2.2.29",
     "mongoose": "^4.11.1",
     "passport": "^0.3.2"
