--- a/package.json
+++ b/package.json
@@ -7,10 +7,14 @@
   "author": "Tran Ngoc Phuong Dang <tdang3618@conestogac.on.ca>; Chi Hieu Tran <htran2620@conestogac.on.ca>; Duncan Robertson <drobertson4833@conestogac.on.ca> ",
   "dependencies": {
     "bcrypt": "^1.0.2",
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.17.2",
+    "connect-mongodb-session": "^1.3.0",
     "express": "^3.21.2",
+    "express-session": "^1.15.3",
     "mongodb": "^2.2.29",
     "mongoose": "^4.11.1",
-    "passport": "^0.3.2"
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0"
   }
 }
