Added Registration feature
Implementation of base registration feature including: validation,
user creation, and html front end

Also added missing npm modules

--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "express-session": "^1.15.3",
     "mongodb": "^2.2.29",
     "mongoose": "^4.11.1",
+    "nodemailer": "^4.0.1",
     "passport": "^0.3.2",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "smtp-connection": "^4.0.2"
   }
 }
