--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.17.2",
     "connect-mongodb-session": "^1.3.0",
+    "ejs": "^2.5.7",
     "express": "^3.21.2",
     "express-session": "^1.15.3",
+    "formidable": "^1.1.1",
+    "fs": "0.0.1-security",
     "mongodb": "^2.2.29",
     "mongoose": "^4.11.1",
     "nodemailer": "^4.0.1",
